--- a/style.css
+++ b/style.css
@@ -26,21 +26,38 @@ body {
 
 }
 
+@media (max-width: 1100px){
+    .header-line{
+        padding-top: 15px;
+    }
+}
+
 .header-logo{
-    padding-left: 50px;
+    padding-left: 25px;
+}
+
+@media (max-width: 1100px){
+    .header-logo{
+        padding-left: 0px;
+    }
 }
 
 .city-text {
     color: blanchedalmond;
     font-weight: 600;
     font-size: 20pt;
-    padding-top: 20px;
     position: absolute;
     top: 0;
     right: 0;
     padding-right: 70px;
     padding-top: 75px;
     text-shadow: #32ce9d84 2px 1px;
+}
+
+@media (max-width: 1100px){
+    .city-text{
+        padding-right: 25px;
+    }
 }
 
 .adress{
@@ -52,6 +69,14 @@ body {
     padding-left: 50px;
 }
 
+@media (max-width: 1100px){
+    .adress{
+        padding-top: 20px;
+        padding-left: 25px;
+        padding-bottom: 10px;
+    }
+}
+
 .adress-text{
     color: white;
     font-weight: 500;
@@ -61,12 +86,26 @@ body {
     padding-bottom: 60px;
 }
 
+@media (max-width: 1100px){
+    .adress-text{
+        padding-left: 25px;
+        padding-bottom: 30px;
+    }
+}
+
 .phone{
     color: blanchedalmond;
     font-weight: 600;
     font-size: 20pt;
     padding-bottom: 20px;
     padding-left: 50px;
+}
+
+@media (max-width: 1100px){
+    .phone{
+        padding-left: 25px;
+        padding-bottom: 10px;
+    }
 }
 
 .phone-text{
@@ -78,12 +117,26 @@ body {
     padding-bottom: 60px;
 }
 
+@media (max-width: 1100px){
+    .phone-text{
+        padding-left: 25px;
+        padding-bottom: 30px;
+    }
+}
+
 .work{
     color: blanchedalmond;
     font-weight: 600;
     font-size: 20pt;
     padding-bottom: 20px;
     padding-left: 50px;
+}
+
+@media (max-width: 1100px){
+    .work{
+        padding-left: 25px;
+        padding-bottom: 10px;
+    }
 }
 
 .work-text{
@@ -94,6 +147,13 @@ body {
     padding-left: 50px;
 }
 
+@media (max-width: 1100px){
+    .work-text{
+        padding-left: 25px;
+        padding-bottom: 30px;
+    }
+}
+
 .btn{
     position: absolute;
         left: 50%;
@@ -102,7 +162,7 @@ body {
 
 @media (max-width: 1100px) {
     .btn{
-        padding-top: 30%;
+        padding-top: 50%;
         position: absolute;
         left: 50%;
     }
@@ -117,11 +177,12 @@ body {
     padding: 20px;
     transition: background-color 0.35s linear;
     text-shadow: #32ce9d84 2px 1px;
+    white-space: nowrap;
 }
 
 @media (max-width: 1100px) {
     .button {
-        font-size: 10pt;
+        font-size: 18pt;
     border-radius: 50px;
     }
 }
