--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ body {
     padding-bottom: 20px;
     padding-left: 50px;
     padding-bottom: 60px;
+    text-decoration: none;
 }
 
 @media (max-width: 1100px){
