--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ body {
 
 }
 
+@media (max-width: 1100px){
+    .header-line{
+        padding-top: 0px;
+    }
+}
+
 .header-logo{
     padding-left: 25px;
 }
@@ -103,13 +109,11 @@ body {
 }
 
 .phone-text{
-    color: white;
     font-weight: 500;
     font-size: 20pt;
     padding-bottom: 20px;
     padding-left: 50px;
     padding-bottom: 60px;
-    text-decoration: none;
 }
 
 @media (max-width: 1100px){
