--- a/style.css
+++ b/style.css
@@ -157,7 +157,8 @@ body {
     position: absolute;
         left: 50%;
         top: 50%;
-        transform: translate(-50%, -50%); 
+        transform: translate(-50%, -50%);
+        font-family:'Open Sans', sans-serif;
 }
 
 @media (max-width: 1100px) {
@@ -170,25 +171,62 @@ body {
 }
 
 .button{
-    color: black;
-    background-color: rgb(255, 215, 155);
+    background-color: rgba(255, 215, 155, 0.87);
+    cursor: pointer;
     font-size: 30pt;
+    font-weight: 500;
     border-radius: 50px;
+    border-style: solid;
     text-decoration: none;
     padding: 20px;
-    transition: background-color 0.35s linear;
-    text-shadow: #32ce9d84 2px 1px;
+    transition: background-color 0.65s linear;
+    text-shadow: #96c2b4 2px 1px;
     white-space: nowrap;
+    animation: wave 2s infinite linear;
+
+}
+
+
+@keyframes wave {
+    0% {
+        box-shadow: 
+        0 0 0 rgba(255, 215, 155, 0);
+    }
+    30% {
+        box-shadow: 
+        0 0 0 30px rgba(255, 215, 155, 0.414);
+    }
+    100% {
+        box-shadow: 
+        0 0 0 60px rgba(255, 215, 155, 0);
+    }
 }
 
 @media (max-width: 1100px) {
     .button {
-        font-size: 18pt;
+    font-size: 20pt;
     border-radius: 50px;
+    font-weight: 500;
+    }
+
+    @keyframes wave {
+        0% {
+            box-shadow: 
+            0 0 0 rgba(255, 215, 155, 0);
+        }
+        30% {
+            box-shadow: 
+            0 0 0 20px rgba(255, 215, 155, 0.414);
+        }
+        100% {
+            box-shadow: 
+            0 0 0 40px rgba(255, 215, 155, 0);
+        }
     }
 }
 
 .button:hover {
     color: black;
     background-color: white;
+    animation:none;
 }
