--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background-attachment: fixed;
     background-size: 100% 100%;
     height: 100vh;
-    
+    overflow: hidden;
 }
 
 @media (max-width: 1100px){
